# Annotate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  annotate-contenthub.json  annotate.apparmor  annotate.desktop  clickable.yaml  deps.sha256  download_deps.sh  manifest.json  run.sh
.github/workflows/: build.yml
webserver/: genkey.cpp  webserver.cpp
www/: index.html  pdf.js  pdf.worker.js
www/cgi-bin/: ack.sh  delete.sh  get.sh  list.sh  rename.sh  save.sh
www/js/: b64.mjs  color_picker.mjs  document.js  document.mjs  document_page.mjs  file_manager.mjs  history_manager.mjs  job.mjs  load.js  main.mjs  menu.js  pdf.mjs  pdf_page.mjs  pdfjs.mjs  save.js  serializer.js  tool_handler.mjs  toolbox.js  toolbox.mjs
www/js/elements/: bbox.mjs  lasso.mjs  stroke.js  stroke.mjs  text.mjs
www/js/tools/: eraser.js  eraser.mjs  highlighter.mjs  lasso.mjs  pen.js  pencil.mjs  typewriter.mjs
